# Regenesis-Auto-Pipeline-system

./: .gitignore  SETUP.md  index.html  pyproject.toml  ui.py
docs/: machine_learning.txt  python_basic.txt
src/: __init__.py  ingest.py  rag_agent.py  run.py
src/nodes/: __init__.py  generate.py  grade.py  retrieve.py  rewrite.py
src/utils/: __init__.py  config.py  logger.py
